--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,3 +1,30 @@
 <h6>Dashboard</h6>
 <h3>Welcome <%- name %></h3>
 <p>Here are your stories</p>
+
+<% if (stories.length > 0) { %>
+<table class="striped">
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Date</th>
+      <th>Status</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% stories.forEach(function(story) { %>
+    <tr>
+      <td><a href="/stories/<%-story._id%>"><%- story.title %></a></td>
+      <td>
+        <%- helper.formatDate(story.createdAt,'MMMM Do YYYY, h:mm:ss a') %>
+      </td>
+      <td><span class="dash-status"><%- story.status %></span></td>
+      <td></td>
+    </tr>
+    <% }) %>
+  </tbody>
+</table>
+<%} else { %>
+<p>You have not created any stories</p>
+<% } %>
