--- a/views/layouts/login.ejs
+++ b/views/layouts/login.ejs
@@ -7,7 +7,7 @@
     <link rel="manifest" href="/manifest.json" />
     <link
       rel="icon"
-      href="https://cdn.iconscout.com/icon/premium/png-512-thumb/storybook-4-1116281.png"
+      href="https://cdn3.iconfinder.com/data/icons/education-3-7/48/106-512.png"
     />
     <link
       rel="stylesheet"
